fix spacing on iphone pt8

--- a/src/app/views/home/Home.scss
+++ b/src/app/views/home/Home.scss
@@ -153,7 +153,7 @@
         }
 
         @media screen and (max-width: $break-small) {
-          margin: 80px auto auto;
+          margin: 90px auto auto;
         }
       }
 
@@ -169,7 +169,7 @@
 
 
         @media screen and (max-width: $break-small) {
-          margin: 36px auto 60px auto;
+          margin: 15px auto 80px auto;
           width: 200px;
         }
       }
